<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dummyfrag_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/input_mode"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <org.angmarch.views.NiceSpinner
                android:id="@+id/spin_mode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/input_function"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <org.angmarch.views.NiceSpinner
                android:id="@+id/spin_function"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/input_time"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <org.angmarch.views.NiceSpinner
                android:id="@+id/spin_time"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/blue"
                android:layout_margin="16dp"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_start_machine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/green"
            android:padding="8dp"
            android:text="@string/button_start_machine"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="13dp" />

    </LinearLayout>

</FrameLayout>